force-app/main/default/objects/Agent_Tool_Mapping__mdt/Agent_Tool_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Agent Tool Mapping</label>
    <pluralLabel>Agent Tool Mappings</pluralLabel>
</CustomObject>