force-app/main/default/objects/Agent_Tool_Mapping__mdt/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <description>DeveloperName of Agent Definition</description>
    <inlineHelpText>DeveloperName of Agent Definition</inlineHelpText>
    <label>Agent</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>