force-app/main/default/objects/Agent_Tool_Mapping__mdt/fields/IsAllowed__c.field-meta.xml
<CustomField>
    <fullName>IsAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAllowed</label>
    <type>Checkbox</type>
</CustomField>