force-app/main/default/objects/Agent_Tool_Mapping__mdt/fields/Tool__c.field-meta.xml
<CustomField>
    <fullName>Tool__c</fullName>
    <description>Agent Tool Definition</description>
    <inlineHelpText>Agent Tool Definition</inlineHelpText>
    <label>Tool</label>
    <referenceTo>Agent_Tool_Definition__mdt</referenceTo>
    <relationshipLabel>Agent-Tool Mappings</relationshipLabel>
    <relationshipName>Agent_Tool_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>